chore: add examples to proto files
