# pkg/server-api/server_api.swagger.json
@@ -188,7 +188,8 @@
       "type": "object",
       "properties": {
         "success": {
-          "type": "boolean"
+          "type": "boolean",
+          "example": true
         }
       }
     },
@@ -222,7 +223,13 @@
       "type": "object",
       "properties": {
         "success": {
-          "type": "boolean"
+          "type": "boolean",
+          "example": true
+        },
+        "address": {
+          "type": "string",
+          "example": "0.0.0.0:8080",
+          "minLength": 1
         }
       }
     },
@@ -244,7 +251,8 @@
       "type": "object",
       "properties": {
         "success": {
-          "type": "boolean"
+          "type": "boolean",
+          "example": true
         }
       }
     }
